--- a/asset/index.html
+++ b/asset/index.html
@@ -4,13 +4,13 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Weanow App</title>
-        <link rel="shortcut icon" href="media\weanowLogo.png" type="image/x-icon">
+        <link rel="shortcut icon" href="\weanowLogo.png" type="image/x-icon">
         <meta name="Author" content="Badamosi Abdullahi">
         <meta name="Description" content="Weanow Weather Wind Humidity Temperature Country Degree Celsius Page Search">
         <meta-viewport content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles.css">
-        <link rel="shortcut icon" href="asset\media\weanowLogo.png" type="image/x-icon">
-        <link rel="shortcut icon" href="media\weanowLogo.png" type="image/x-icon">
+        <link rel="shortcut icon" href="asset\\weanowLogo.png" type="image/x-icon">
+        <link rel="shortcut icon" href="\weanowLogo.png" type="image/x-icon">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,300;12..96,400;12..96,500;12..96,600;12..96,700;12..96,800&display=swap" rel="stylesheet">
@@ -21,7 +21,7 @@
                 <div class="overlay-hero"></div>
                     <div class="container">
                         <div class="contain top-bar">
-                            <a href="#"><img class="logo logoImage" src="media\lightModeLogo.png" alt="Logo"></a>
+                            <a href="#"><img class="logo logoImage" src="\lightModeLogo.png" alt="Logo"></a>
                             <div class="mode">
                                 <div class="state lightMode activeMode">
                                     <svg class="lightSun" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 256 256"><path d="M120,40V16a8,8,0,0,1,16,0V40a8,8,0,0,1-16,0Zm8,24a64,64,0,1,0,64,64A64.07,64.07,0,0,0,128,64ZM58.34,69.66A8,8,0,0,0,69.66,58.34l-16-16A8,8,0,0,0,42.34,53.66Zm0,116.68-16,16a8,8,0,0,0,11.32,11.32l16-16a8,8,0,0,0-11.32-11.32ZM192,72a8,8,0,0,0,5.66-2.34l16-16a8,8,0,0,0-11.32-11.32l-16,16A8,8,0,0,0,192,72Zm5.66,114.34a8,8,0,0,0-11.32,11.32l16,16a8,8,0,0,0,11.32-11.32ZM48,128a8,8,0,0,0-8-8H16a8,8,0,0,0,0,16H40A8,8,0,0,0,48,128Zm80,80a8,8,0,0,0-8,8v24a8,8,0,0,0,16,0V216A8,8,0,0,0,128,208Zm112-88H216a8,8,0,0,0,0,16h24a8,8,0,0,0,0-16Z"></path></svg>
@@ -48,7 +48,7 @@
             <main class="mainSection">
 
                 <section class="upperBar">
-                    <a href="#"><img class="logo logoImage" src="media\lightModeLogo.png" alt="Logo"></a>
+                    <a href="#"><img class="logo logoImage" src="\lightModeLogo.png" alt="Logo"></a>
                     <div class="searchTools">
                         <div class="inputContainer">
                             <svg class="searchIcon" xmlns="http://www.w3.org/2000/svg" width="20" height="20"  viewBox="0 0 256 256"><path d="M229.66,218.34l-50.07-50.06a88.11,88.11,0,1,0-11.31,11.31l50.06,50.07a8,8,0,0,0,11.32-11.32ZM40,112a72,72,0,1,1,72,72A72.08,72.08,0,0,1,40,112Z"></path></svg>
@@ -76,7 +76,7 @@
 
                         <div class="temperatureContainer">
                                 
-                                <img class="weatherImage" src="media\Rain.png" alt="Heavy Rain" aria-label="Heavy Rain">
+                                <img class="weatherImage" src="\Rain.png" alt="Heavy Rain" aria-label="Heavy Rain">
                                 <div class="weather-condition">
                                     <p class="weatherText">Heavy Rain</p>
                                     <p class="tempData">38°C</p>
@@ -114,7 +114,7 @@
 
             <footer class="footer">
                 <div class="footer-content">
-                    <a href="#"><img class="logo logoImage" src="media\lightModeLogo.png" alt="Logo"></a>
+                    <a href="#"><img class="logo logoImage" src="\lightModeLogo.png" alt="Logo"></a>
                     <p class="footer-details ">Designed & Developed by Abdoorl</p>
                     <p class="footer-details grey">All Rights Reserved</p>
                 </div>
